--- a/book.tex
+++ b/book.tex
@@ -555,6 +555,13 @@ Convertir las siguientes magnitudes a lo que se indica:
 lado, ¿cuántos terrones obtendríamos?
 \item[24.] La edad de la Tierra es aproximadamente 4500 000 000 años. Exprese esta cantidad en segundos y en notación
 científica.
+\item[25.] La masa de un electrón es $9 \times 10^{-31}Kg$. Las masas de un protón y de un neutrón son $1,6725 \times 10^{
+-27} Kg$ y $1,6748 \times 10^{-27} Kg$, respectivamente. Determine la masa de un átomo de azufre sabiendo que tiene 16 
+electrones, 16 protones y 16 neutrones. Expresa la respuesta en notación científica.
+
+\item[26.] El diámetro de un virus es $5 \times 10^{-4} mm$. ¿Cuantos de esos virus son necesarios para rodear la Tierra? 
+(Radio de la Tierra: 6370 km) 
+
  \end{itemize}
 
 \section{Fórmulas}
@@ -907,20 +914,31 @@ determina su dirección)
  
  \item Dado el vector $a =(3,-4)$, calcular el vector libre $b$ que tiene: la misma dirección y sentido que $a$ y módulo 
 igual a la unidad.
+
+\item Encuentre el producto escalar entre los siguientes vectores: $\vec{A} = 2\vec{i} + 3\vec{j}$ y $\vec{D} = 3\vec{i} - 
+\vec{j}$.
+ 
+ \item Exprese el siguiente vector en coordenadas cartesianas: c = (5, NE)
  
  \item Encuentre el vector unitario del vector que es opuesto al siguiente vector $\vec{S} =  10\vec{i}-7\vec{j}$.
+ 
+ \item Encuentre el valor de t para el cual el siguiente vector resulta ser unitario: $\vec{v} = (t+1)\vec{i} +(t-1)\vec{j}$.
  
  \item Un vector hace un ángulo de $240^\circ$ en sentido antihorario con el eje de las abcisas y el valor de su componente 
 en ese mismo eje es de 200 m, halle el vector unitario de ese vector.
  
  \item Encuentre el módulo del siguiente vector: $5\vec{d}-2\vec{c}$, donde $d=(34 m/s, 330^\circ)$ y $c = (54m/s, S20^\circ 
 O)$.
+
+\item Averigue si los vectores A = (-3,4) y B = (3,4) son perpendiculares entre si.
  
  \item Determina las coordenadas geográficas del siguiente vector: $\vec{R}=(23 m/s,N45^\circ E)$.
  
  \item Determina las coordenadas polares del siguiente vector: $\vec{T}=(7\vec{i}-4\vec{j})kgf$.
  
  \item Determina las coordenadas cartesianas del vector: $\vec{h}=(13,330^\circ)$.
+ 
+ \item Encuentre el módulo del siguiente vector: 5d−2c, donde d = (34m/s, $330^\circ$ ) y c = (54m/s,S$20^\circ$ O).
 
  \item Calcula el producto escalar entre $\vec{a}=6\vec{i}-7\vec{j}$ y $\vec{b}=-4\vec{i}+10\vec{j}$.
 
@@ -1190,11 +1208,57 @@ decir que su velocidad es de $v = \frac{8m}{2s} = 4 m/s$, por lo cual despues de
 \subsection{Problemas de mru}
 
 \begin{enumerate}
- \item En el mismo instante, una motocicleta sale de la ciudad A y otra de la ciudad B, con la intención de encontrarse en el 
+
+\item Encuentre la longitud recorrida por un móvil que va a una velocidad de 1200 cm/s durante media hora. 
+
+\item Un tren va a una velocidad de 200 km/h. ¿Qué distancia recorrerá en media hora? 
+
+\item Calcula la velocidad expresada en unidades el SI de un camión que recorre los 90 km que existe entre dos ciudades 
+separadas en 1 hora y 10 minutos. 
+
+\item  Un automóvil recorre 180 m en 30 segundos. ¿Cuál es su velocidad? 
+
+\item  Una partícula situada en el punto  (3,-4)m se mueve con velocidad constante hasta el punto (4,5)m en 12 segundos, 
+determina la velocidad empleada
+
+\item  Dos autos de carrera compiten entre si en una pista en línea recta cuya longitud es de 30 km. ¿Cuál será el auto 
+ganador si el primero tiene una velocidad de 144 km/h, mientras que el segundo tiene una velocidad de 300 km/h pero
+parte desde una posición de ventaja de 500 m?
+
+\item Un coche se mueve durante 30 minutos a 40 km/h; después se mueve a 60 km/h durante la siguiente hora. Finalmente durante 
+15 minutos circula a 20 km/h. ¿Qué distancia total habrá recorrido?
+ 
+\item En el mismo instante, una motocicleta sale de la ciudad A y otra de la ciudad B, con la intención de encontrarse en el 
 camino recto de 60 kilómetros que une ambas ciudades. Sabiendo que las velocidades de las motocicletas son 70km/h y 55km/h, 
 calcular cuánto tardarán en encontrarse.
-\item Una auto viaja con MRU y debe llegar a su destino a las 8.00 PM. Si viajara a 120 km/h llegarı́a una hora después y si 
-viajara a 160 km/h llegarı́a media hora antes. ¿A qué velocidad debe el auto viajar para que llegar a la hora indicada?.
+
+\item En una persecución policial, el automóvil a la fuga lleva una velocidad de 150km/h cuando pasa por un determinado punto 
+de una carretera. Tres minutos después, el automóvil oficial que sigue al anterior pasa por dicho punto a una velocidad de tan 
+solo 240km/h para evitar causar un accidente con los demás vehículos de la carretera a causa de un exceso de velocidad. Se 
+supone que las velocidades indicadas son constantes y la carretera es recta. Calcular cuánto tardará la policía en alcanzar 
+al delincuente.
+
+\item Para recorrer dos puntos que distan entre sí 200 m, un móvil se desplaza con una velocidad constante de 50 m/s, si se 
+duplica su velocidad para cubrir la misma distancia , ¿cuántos segundos utilizará?
+
+\item  Dos autos de carrera compiten entre si en una pista en línea recta cuya longitud es de 30 km. ¿Cuál será el auto 
+ganador si el primero tiene una velocidad de 144 km/h, mientras que el segundo tiene una velocidad de 300 km/h pero
+parte desde una posición de ventaja de 500 m?
+
+\item  La velocidad de la luz en el vacío es, aproximadamente, v = 300.000 km/s. ¿Cuánto tarda en llegar la luz del Sol al 
+planeta Tierra si éstos distan unos 149,6 millones de kilómetros?
+
+\item  Dos trenes parten de una misma estación; uno a 50 km/h y el otro a 72 km/h. ¿A qué distancia se encontrarán al cabo de 
+media hora si marchan en sentido contrario? 
+
+\item  ¿En que momento se cruzan dos  autos que parten de dos ciudades que distan 80 km, si sus velocidades son de 70 km/h y 90 
+km/h, respectivamente y que van al encuentro del uno con respecto al otro?
+
+\item  Un auto viaja con MRU y debe llegar a su destino a las 8.00 PM. Si viajara a 140 km/h llegarııa una hora después y si 
+viajara a 180 km/h llegaría media hora antes. ¿A qué velocidad debe el auto viajar para que llegar a la hora indicada?
+
+\item Dos móviles están separados 200 km, y se mueven al encuentro llegando a cruzarse al cabo de 8 horas. Calcula la velocidad 
+del más veloz, si la velocidad del otro es 2 km/h menos. 
 \end{enumerate}
 
 
@@ -1288,7 +1352,40 @@ resolver problemas relacionados con el MRUV).
 
 \begin{enumerate}
  \item Un ciclista que está en reposo comienza a pedalear hasta alcanzar los 6 m/s en 6 minutos. Calcular la distancia total que 
-recorre si continúa acelerando durante 5 minutos más. 
+recorre si continúa acelerando durante 5 minutos más.
+
+\item  Un cuerpo se mueve con una velocidad de $3 \vec{i} – 4\vec{j}$ [m/s] y se le aplica una aceleración de $0.3 m/s^2$
+ en la misma dirección de la velocidad. Determine la distancia recorrida al cabo de un minuto de recorrido.
+ 
+\item Dos vehículos separados por 20 km parten al encuentro en el instante t=0. El primero lo hace con una velocidad inicial 
+constante de 20 km/h. El segundo parte desde el reposo y con una aceleración de $0,5 m/s^2$. ¿A qué distancia de la salida del 
+primer vehııculo se encuentran? 
+
+\item Un móvil viaja a 60 km/h y comienza a reducir su velocidad a partir del instante t=0. Al cabo de 8 segundos se detiene 
+completamente. ¿Cuál fue aceleración durante el período en el que redujo su velocidad?
+
+\item Un tren viaja a 80 km/h. Inmediatamente después de pasar una señal en rojo comienza a detenerse. Se detiene completamente 
+a los 150 metros. Determinar su aceleración.
+
+\item Un automóvil corre a una velocidad  de 20 m/s, en ese instante pisa el acelerador produciendo una aceleración constante 
+que aumenta su velocidad a 30 m/s en 5s. ¿Cuál será su velocidad al cabo de 10s?
+
+\item Un móvil se desplaza con velocidad inicial desconocida. A partir de t=0 comienza a acelerar a $1,7 m/s^2$. Luego de 12 
+segundos se desplaza a 110 km/h. Determinar la velocidad inicial.
+
+\item Un tren viaja a una velocidad constante de 90 km/h y pasa una señal en rojo. A 80 metros de pasar la señal comienza a 
+reducir su velocidad a razón de $3m/s^2$. ¿A qué distancia de la señal se detiene por completo?¿Cuánto tarda en hacerlo a 
+partir del momento en el que pasa la señal?
+
+\item Dos vehículos separados por 20 km parten al encuentro en el instante t=0. El primero lo hace con una velocidad inicial 
+constante de 20 km/h. El segundo parte desde el reposo y con una aceleración de $0,5 m/s^2$ . ¿A qué distancia de la salida 
+del primer vehículo se encuentran?
+
+\item Dos vehículos A y B se mueven con aceleración constante, el vehículo B tiene una velocidad inicial $\vec{v_0B} = (50 
+\vec{i} – 4 \vec{j}) km/h$, y después de 2 horas alcanza una velocidad final $\vec{v_fB}=(54 \vec{i} + 16\vec{j}) km/h$. Si se 
+conoce que la aceleración del vehículo A es el doble que la del vehículo B, determine la aceleración del vehículo A.
+
+
 \end{enumerate}
 
 
@@ -1381,6 +1478,14 @@ de 32 metros?
  \item[c.] La velocidad de llegada al suelo.
  \item[d.] El tiempo total en el aire.
 \end{itemize}
+
+\item Determina la velocidad con que fue lanzado un cuerpo hacia arriba si ésta se reduce a la tercera parte cuando ha subido 
+29.4 m.
+
+\item  Se deja caer una piedra desde lo alto de un edificio de 40 m de altura, ¿con que velocidad llegará al suelo?
+
+\item  Una piedra es lanzada verticalmente hacia arriba con una velocidad de 98 m/s. ¿A qué altura llegará?
+
 \item Un cuerpo se lanza verticalmente hacia arriba desde una ventana y luego de 4 segundos triplica su velocidad. Hallar la 
 máxima altura alcanzada por el cuerpo respecto al lugar de lanzamiento.
 \item Una esfera se deja caer desde 80 m de altura y al rebotar en el piso se eleva siempre la cuarta parte de la altura anterior. 
@@ -1388,6 +1493,32 @@ máxima altura alcanzada por el cuerpo respecto al lugar de lanzamiento.
 \item Un cuerpo cae libremente desde el reposo. La mitad de su caída se realiza en el último segundo, calcular el tiempo total.
 
 \item Un cuerpo se suelta desde una altura H. ¿Con qué velocidad llegará al suelo?.
+
+\item Desde la boca de un pozo de 50 metros de profundidad, ¿a qué velocidad hay que lanzar una piedra para que llegue al fondo 
+en 2 segundos?
+
+\item Lanzamos hacia arriba un objeto desde la altura de 1,5 m y con una velocidad de 24,5 m/s. Determina la posici´on y la 
+velocidad al instante de 3 segundos.
+
+\item  Un cuerpo parte del reposo con una aceleración de $5 m/s^2$. ¿Cuál es la distancia recorrida durante el octavo segundo 
+del recorrido?
+
+\item  Un niño deja caer una piedra desde lo alto de un árbol de 5 m del suelo. Simultáneamente, otro niño lanza una piedra 
+desde el suelo hacia arriba con una velocidad de 3 m/s. ¿A qué distancia del suelo coinciden las dos piedras en sus respectivas
+trayectorias?
+
+\item  Desde una altura de 200 m se deja caer un cuerpo, y simultáneamente desde el suelo se lanza un cuerpo con una velocidad 
+de 20 m/s hacia arriba. ¿Cuándo la distancia entre ellos es de 20m?.
+
+\item Un niño deja caer una piedra desde lo alto de un árbol de 4 m del suelo. Simultáneamente, otro niño lanza una piedra desde 
+el suelo hacia arriba con una velocidad de $6 ms^{−1}$. ¿A qué distancia del suelo coinciden las dos piedras en sus respectivas 
+trayectorias?
+
+\item A una niña se le cae una pelota desde el quito piso de un edificio, a 15 metros del suelo. El vecino del tercero, a 9 m 
+del suelo la ve pasar. Calcular: a) El tiempo que tarda en llegar al suelo, b) su velocidad al pasar por el tercer piso.
+
+\item Nahiara deja caer una moneda a un pozo y escucha el sonido del agua 2,5 s después de iniciarse la caída. Halla: a) La 
+profundida del pozo y b) la velocidad con la que llega al agua (La velocidad del sonido: $340ms^{−1}$).
 
 \end{enumerate}
 
@@ -1489,9 +1620,34 @@ que:
 \section{Problemas de movimiento parabólico}
 
 \begin{enumerate}
+
  \item Un soldado acostado en el suelo lanza una granada con velocidad inicial de 25 m/s, y un ángulo de elevación de
- $53^\circ$
-. Despupess de que tiempo escuchará el estallido. Velocidad del sonido: 340m/s.
+ $53^\circ$. Despues de que tiempo escuchará el estallido. Velocidad del sonido: 340m/s.
+ 
+ \item Se dispara una flecha a 25 m/s y a $30^\circ$ con la horizontal, para dar en un árbol que está a 30 metros de distancia. 
+Determinar: a) la altura a la que se elevará la flecha,  b) el ángulo que formarán la flecha con el árbol, y c) el tiempo que 
+tarda la flecha hasta dar con el árbol. 
+
+\item Un jugador de Fútbol Americano patea el balón con una velocidad de 30 m/s, y éste mismo lleva un ángulo de elevación de 
+$45^\circ$ respecto a la horizontal. Calcule; a) altura, b) alcance, y c) tiempo que permanece en el aire.
+
+\item  Un proyectil es lanzado de modo que su alcance máximo es de 44 m. Sabiendo que el ángulo de tiro es de $45^\circ$, 
+averigua la velocidad inicial del lanzamiento. 
+
+\item Se dispara un proyectil con una velocidad inicial de 50 m/s y un ángulo de $25^\circ$, por encima de la horizontal. 
+Calcular la velocidad del proyectil después de los 6s.
+
+\item Se dispara un proyectil con una velocidad inicial de 60 m/s y un ángulo de $30^\circ$, por encima de la horizontal. 
+Calcular: a) Posición y velocidad después de los 6s, b) tiempo para alcanzar la altura máxima y c) el  alcance horizontal.
+
+\item  Un proyectil es lanzado de modo que su alcance máximo es de 55 m. Sabiendo que el ángulo de tiro es de $45^\circ$, 
+averigua la velocidad inicial del lanzamiento. 
+
+\item Dos personas, A y B, se encuentran en las ventanas de dos edificios ubicados uno frente a otro, en los lados opuestos de 
+una calle. Los edificios est´an separados entre sí 10 m y las alturas de las ventanas respecto al piso son 15 m para A y 20 m 
+para B. Si B lanza, hacia la derecha, un globo con agua con la intención de impactar a A y la rapidez inicial del globo es de 
+10 m/s, calcule: a) el ángulo de disparo respecto a la horizontal, y b) el vector velocidad del proyectil el momento del impacto.
+
 \end{enumerate}
 
 
@@ -1624,20 +1780,58 @@ Esto implica que el cuerpo que tiene MCU sólamente posee una aceleración que e
  \item[g.] 77 cm y $360^\circ$
  \item[h.] 50 mm y $60^\circ$
 \end{itemize}
+
+\item Una partícula gira por una trayectoria circular de radio 1m da 40 vueltas en 6 segundos. Calcular: a) la velocidad angular 
+y b) la aceleración centrípeta.
+
+\item  Una partícula gira por una trayectoria circular de radio 1m da 40 vueltas en 6 segundos. Calcular: a) la velocidad 
+angular y b) la aceleración centrípeta.
+
+\item  Un móvil se mueve en una circunferencia de 50 cm de radio con una velocidad angular de 180 rpm, determine la distancia
+recorrida y la frecuencia alcanzada después de 10s.
+
+\item  Del problema anterior encuentre lo siguiente: a) La frecuencia y b) el ángulo girado luego de un minuto.
+
+\item Un punto de la periferia de la rueda de un automóvil con radio 0,30 m se mueve con una velocidad de 36 km/h. ¿Cuál es su 
+velocidad angular en rad/s?¿Cuál es su aceleración centrípeta? 
+
+\item Las aspas de un ventilador giran uniformemente a razón de 90 vueltas por minuto. Determina: a) su velocidad angular, en 
+rad/s; b) el número de vueltas que darán las aspas en 5min; c) Su periodo y d) su frecuencia.
+
+\item Un móvil se mueve en una  circunferencia de 50 cm de radio con una velocidad angular de 180 rpm/min, determine la 
+distancia recorrida y la frecuencia alcanzada después de 10s
+
  \item Un ciclista recorre 5,4 km en 15 min a velocidad constante. Si el diámetro de las ruedas de su bicicleta es de 80 cm, 
 calcula: a) la velocidad angular de las ruedas y b) el número de vueltas que dan las ruedas en ese tiempo.
+
 \item Dos poleas de 6 y 15 cm de radio respectivamente, giran conectadas por una banda. Si la velocidad angular de la polea de 
 menor radio es 20 vueltas/segundo. ¿Cúal es la velocidad angular de la polea de radio mayor?.
 \begin{figure}[H]
  \centering
 \includegraphics[width=5.0cm,height=3.0cm]{images/poleas.jpg}
 \end{figure}
+
+\item Un auto se mueve alrededor de una pista circular cuyo radio es de 50 metros de radio con un velocidad constante de 90 km/h.
+ ¿Cuál es la velocidad angular que posee ese auto?
+ 
+\item La rueda de una bicicleta tiene 30 cm de radio y gira uniformemente a razón de 25 vueltas por minuto. Calcula: a) La 
+velocidad angular, en rad/s, b) La velocidad lineal de un punto de la periferia de la rueda, c) Ángulo girado por la rueda en 30 
+segundos y d) número de vueltas en ese tiempo.
+
+\item Un coche circula a una velocidad de 90 Km/h , si el radio de las ruedas del coche es de 30 cm, calcula: a)su velocidad 
+lineal en m/s y b)la velocidad angular de las ruedas en rad /s y r.p.m.
+
+\item  Si la velocidad angular de un disco se duplica, ¿Qué ocurre con la velocidad lineal?
+ 
 \item Un astronauta da la vuelta a la Tierra cada 300 minutos.¿Cuál es la velocidad angular?¿Cuál es su velocidad lineal si 
 describe una orbita de 30000 km de radio?
+
 \item ¿Cuál es la velocidad de un angular de un disco que gira con una velocidad angular de 13,4 rad en un minuto? Si el radio 
 del disco es 20 cm, ¿cuál es la velocidad lineal en el borde del mismo?.
+
 \item ¿Cuánto tiempo necesitará el disco anterior para girar 3 vueltas enteras?¿Cuál es la aceleración centrípeta en el borde del 
 disco?
+
 \item ¿Cuál es la velocidad angular de un disco que gira con una velocidad angular de $3\pi$ rad en medio minuto? Si el radio del 
 disco es 40 cm, ¿cuál es la aceleración centrípeta en el borde del mismo?.
 
@@ -1655,6 +1849,12 @@ disco es 40 cm, ¿cuál es la aceleración centrípeta en el borde del mismo?.
 \item Calcule la aceleración centrípeta de la   Luna.
 
 \item Calcule la aceleración centrípeta y angular de la Tierra alrededor del Sol.
+
+\item  Un punto de la periferia de la rueda de un automóvil con radio 0,30 m se mueve con una velocidad de 36 km/h. ¿Cuál es su 
+velocidad angular en rad/s? ¿Cuál es su aceleración centrípeta?
+
+\item Desde un mismo punto de la circunferencia parten dos móviles en sentido opuesto. El primero recorre la circunferencia en 
+1h10 min y el segundo recorre un ángulo de 30° en 3 segundos. Determine cuándo se encuentran los móviles.
 
 \end{enumerate}
 
@@ -1765,7 +1965,8 @@ s = v_0t+\frac{1}{2}a_Tt^2
 \section{Problemas de mcuv}
 
 \begin{enumerate}
- \item Una partícula inicia su M.C.U.V. con una velocidad tangencial de 6 m/s. Si su aceleración tangencial es $4 m/s^2$, y su 
+
+\item Una partícula inicia su M.C.U.V. con una velocidad tangencial de 6 m/s. Si su aceleración tangencial es $4 m/s^2$, y su 
 radio de giro es 9 m. Determinar su velocidad tangencial y angular luego de 12 segundos.
 
 \item Calcular la aceleración angular que tiene un disco, sabiendo que éste es capaz de triplicar la velocidad que tiene luego de 
@@ -1776,6 +1977,12 @@ dar 600 vueltas en 20 s.
 
 \item Un ventilador alcanza su velocidad máxima de trabajo de 900 R.P.M. en 40 s. Si al ``encenderlo'' inicia su movimiento con 
 aceleración constante, calcular cuántas revoluciones completa en el primer minuto de su movimiento.
+
+\item La velocidad angular de un motor cambia uniformemente 200 rpm a 120 rpm en 4 segundos. Determinar: a) la aceleración 
+angular y b) el desplazamiento angular.
+
+\item  La velocidad de un automóvil aumenta en 5 segundos de 15 km/h a 55 km/h. Si el radio de las ruedas es de 70 cm, ¿cuál es 
+la aceleración angular de las mismas? 
 
 \item Un móvil tiene una velocidad tangencial de 120m/s; luego de 5 segundos esta velocidad se convierte en 154 m/s. Si el radio 
 de la circunferencia es de 4m, hallar la aceleración angular. 
@@ -1791,6 +1998,15 @@ inicial de $8 rad/s$ y experimenta una aceleración de $3 rad/s^2$ en 12 s.
 
 \item Una  rueda  gira  con  una  velocidad  angular inicial  de  12  rad/s  experimentando  una  aceleración de $5 rad/s^2$ en 
 6s. Calcular: a) el desplazamiento angular total, b) la velocidad angular final.
+
+\item La velocidad angular de un motor cambia uniformemente 200 rpm a 120 rpm en 4 segundos. Determinar la aceleración lineal de 
+un punto que esta a 50 cm del eje de rotación del motor.
+
+\item Un punto de la periferia de la rueda de un automóvil con radio 0,30 m  se mueve con una velocidad de 72 km/h, de pronto el 
+automóvil se frena uniformemente a razón de $4 m/s^2$.  Calcular  el ángulo girado  después de 10 segundos.
+
+\item  Un motor que tiene una frecuencia de 20 Hz, se apaga y se detiene en 5 segundos. ¿Cuál es su velocidad lineal al 
+tiempo de 2 segundos de un punto que se ubica a 50 cm del eje de rotación del motor?
 
 \end{enumerate}
 
@@ -2037,12 +2253,34 @@ fuerzas actuando.
  \item Una fuerza neta de 7.5 kN dirigida hacia el oeste actúa sobre un auto de carreras de 1208 kg. ¿A qué velocidad acelerará 
 el auto?
 
+\item  ¿Cuál es la masa de un cuerpo, si al aplicarle una fuerza de 200 N le produce una aceleración de $40 m/s^2$?
+
+\item  ¿Cuánto tiempo deberá actuar una fuerza de 250 N sobre un cuerpo de 12,5 kg para lograr detenerlo si va a una velocidad 
+de 720 km/h?
+
  \item Un automóvil, con una masa de 1485 kg viaja hacia el sur a 116 km/h, disminuye su velocidad en 10.25 segundos. ¿Cuál es la 
 magnitud y la dirección de la fuerza neta que actuó en el camión?
 
 \item Un ascensor pesa 400 Kg. ¿Qué fuerza debe ejercer el cable hacia arriba para que suba con una aceleración de $5 m/s^2$?.
 
+\item Una pelota de fútbol de 550 g de masa adquiere una velocidad de 70 m/s mediante un puntapié de 0,2 s de duración, ¿qué 
+fuerza recibió la pelota?
+
+\item Una locomotora de 8000 kg de masa tira de un tren de 40000 kg a lo largo de una vía nivelada y lo mueve con una aceleración 
+de $1,2 m/s^2$. ¿Con qué aceleración tiraría a un tren de 16000 kg?
+
+\item Resover el problema anterior si la vía descrita tiene un ángulo de $12^\circ$ con respecto a la horizontal.
+
+\item  Una grúa eleva una masa m = 800 kg mediante un cable que soporta una tensión de 12000 N. ¿Cuál es la máxima aceleración 
+con que se puede elevar?
+
+\item Un vehículo de 150 kg de masa se mueve en línea recta a 70 km/h. ¿Qué fuerza debe aplicarse en forma constante para que 
+reduzca su velocidad a 20 km/h durante los siguientes 10 segundos de aplicada la fuerza?
+
 \item Calcula la fuerza que habrá que realizar para frenar, hasta detener en 10 segundos un trineo que se mueve a 50 km/h.
+
+\item ¿Cómo cambia la el valor de la aceleración que adquiere un cuerpo si se duplica su masa y se reduce a la mitad el módulo de 
+la fuerza aplicada sobre el mismo?.
 
 \item Un vehículo de 800 kg se mueve en un tramo recto y horizontal de autovı́a a 72 km/h. Si por una averı́a deja de funcionar 
 el motor y se detiene a los 100 m, calcula la fuerza de rozamiento.
@@ -2056,6 +2294,12 @@ velocidad de 720 km/h?
 
 \item Calcular la masa de un cuerpo, que estando de reposo se le aplica una fuerza de 150 N durante 30 s, permitiéndole recorrer 
 10 m. ¿Qué rapidez tendrá al cabo de ese tiempo?
+
+\item  Una auto se mueve a una velocidad de 36 km/h, y de pronto debe frenar hasta detenerse antes de cruzar con un semáforo en 
+rojo que se ubica a 0,1 km. Determine la fuerza de frenado si el auto tiene una masa de 500 kg.
+
+\item  Si una fuerza se aplica a un cuerpo de masa $m$ éste adquiere una aceleración. Si la misma fuerza se aplica a un cuerpo 
+de masa $2m$, ¿Cuál sería su aceleración?
 
 \item Calcular la magnitud de la aceleración que produce una fuerza cuya magnitud es de 50 N a un cuerpo cuya masa es de 13,000 
 gramos.
@@ -2081,6 +2325,10 @@ igual a $10 m/s^2$.
 \item Dos bloques de masas $m_1 = 20 kg$ y $m_2 = 8 kg$, están unidos mediante una cuerda homogénea inextensible que pesa 2 kg. Se
 aplica al conjunto una fuerza vertical hacia arriba de 560 N. Calcular: a) La aceleración del conjunto; b) Las fuerzas que actúan 
 en los extremos de la cuerda.
+
+\item Un astronauta percibe que se aleja lentamente de la estación espacial y la cuerda que lo conecta está rota. En sus manos 
+tiene un equipo de 5 kg. ¿Qué podría hacer el astronauta de forma rápida para intentar volver a la estación espacial?     
+
 \end{enumerate}
 
 
@@ -2252,6 +2500,48 @@ la fuerza de rozamiento es equivalente a la décima parte del peso?
 
 \item Se tiene un plano inclinado cuya longitud es 15 m y cuya base es 9 m. ¿Con qué velocidad y con qué energía cinética  llegará 
 a su extremo inferior un cuerpo de 60 Kg que partió del extremo superior con una velocidad de 2 m/s? 
+
+\item  Si la masa de un cuerpo se duplica y su velocidad se reduce a la cuarta parte, ¿cómo cambia su cantidad de energía 
+cinética?
+
+\item  Una pelota de fútbol de 550 g de masa adquiere una velocidad de 70 m/s mediante un puntapié de 0,2 s de duración, ¿cuál 
+es el trabajo mecánico realizado por la fuerza ? 
+
+\item  Sobre un cuerpo de 10 kg de masa actúa una fuerza de 100N que forma un ángulo de 30º con la horizontal que hace que se 
+desplace 5 m. Si el coeficiente de rozamiento entre el cuerpo y el suelo es 0,2, calcula el trabajo realizado por la normal. 
+
+\item Calcule la potencia realizado por un motor de un ascensor de 300 kg que se eleva a una velocidad 0.5 m/s.
+
+\item Un paquete es lanzado por un plano inclinado $20^\circ$ con la horizontal con una velocidad de 8m/s en un punto A del 
+plano. Llega a un punto B situado 7 m más arriba de A y se detiene. ¿Cuál es el coeficiente de fricción entre el paquete y el
+plano inclinado?
+
+\item Un cuerpo de 1,5 kg de masa cae desde 60 m. Determinar la energía potencial y cinética a 15 metros antes de topar el piso.
+
+\item  Un motor eléctrico realiza trabajo sobre un compresor a un ritmo de 1.5 KW. ¿Cuánto trabajo ha realizado en un mes si el 
+compresor funciona ininterrumpidamente?
+
+\item Una fuerza de 150 N paralela a un plano inclinado de ángulo $30^\circ$ actúa sobre un cuerpo de masa 10 Kg. Si el cuerpo 
+asciende 5 m por el plano inclinado y μ= 0,2. Calcular la energía perdida como calor.
+
+\item  Un cuerpo 4 kg cae desde 2,3 m de altura sobre un resorte cuya constante es 200 N/m. Calcular la velocidad del cuerpo 
+cuando el resorte se ha comprimido 2.5 cm.
+
+\item Desde la parte más baja de un plano inclinado, sube un bloque hasta detenerse en la parte más alta del mismo plano. Si la 
+energııa mecánica total del bloque en la parte inferior y la superior es de 100J y 70 J, respectivamente, determine el 
+coeficiente de rozamiento entre el bloque y el plano.
+
+\item Se lanza una pelota desde 2m de altura. En el segundo rebote la altura que alcanza es 0.35 m. ¿Qué porcentaje de energía 
+pierde cada vez que rebota?
+
+\item Se suelta un bloque de masa de  10 kg desde lo alto de un plano inclinado que forma un ángulo de 30° con la horizontal y 
+de  longitud 50 cm. El bloque choca contra un resorte horizontal ideal y lo deforma 10 cm en la parte  baja del plano 
+inclinado. Conociendo que el coeficiente de rozamiento entre el plano inclinado y el bloque es 0.3; determine la constante 
+elástica del resorte.
+
+\item  Un paquete es lanzado por un plano inclinado $20^\circ$ con la horizontal con una velocidad de 8m/s en un punto A del 
+plano. Llega a un punto B situado 7 m más arriba de A y se detiene. ¿Cuál es el coeficiente de fricción entre el paquete y el
+plano inclinado?
 
 \end{enumerate}
 
